// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatalyticActivityView component should render catalytic activity 1`] = `
<DocumentFragment>
  <h3>
    Catalytic activity
  </h3>
  <span
    class="text-block"
  >
    <strong>
      EC:12112
    </strong>
     Reaction nameThis reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      forward
    </span>
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 publication
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
     and the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
    <button
      aria-controls="1"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 publication
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="1"
    />
     directions 
  </span>
</DocumentFragment>
`;

exports[`CatalyticActivityView component should render catalytic activity when comment does not have reactionCrossReferences 1`] = `
<DocumentFragment>
  <span
    class="text-block"
  >
    <strong>
      EC:12112
    </strong>
     Reaction nameThis reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      forward
    </span>
    <button
      aria-controls="2"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 publication
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="2"
    />
     and the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
    <button
      aria-controls="3"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 publication
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="3"
    />
     directions 
  </span>
</DocumentFragment>
`;

exports[`ReactionDirection component should render ReactionDirection when one physiologicalReactions is present 1`] = `
<DocumentFragment>
  This reaction proceeds in the 
  <span
    data-testid="direction-text"
  >
    forward
  </span>
   direction 
  <button
    aria-controls="4"
    aria-expanded="false"
    class="svg-colour-reviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      1 publication
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="4"
  />
</DocumentFragment>
`;

exports[`ReactionDirection component should render ReactionDirection when two physiologicalReactions are present and should be in correct order (forwards then backwards) 1`] = `
<DocumentFragment>
  This reaction proceeds in the 
  <span
    data-testid="direction-text"
  >
    forward
  </span>
  <button
    aria-controls="5"
    aria-expanded="false"
    class="svg-colour-reviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      1 publication
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="5"
  />
   and the 
  <span
    data-testid="direction-text"
  >
    backward
  </span>
  <button
    aria-controls="6"
    aria-expanded="false"
    class="svg-colour-reviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      1 publication
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="6"
  />
   directions 
</DocumentFragment>
`;

exports[`RheaReactionVisualizer component should render RheaReactionVisualizer 1`] = `<DocumentFragment />`;

exports[`ZoomModalContent component should render 1`] = `
<DocumentFragment>
  <div
    class="zoom-image-container"
  >
    <img
      alt="chebi:12345"
      style="display: none;"
    />
    <div
      class="loader-container"
    >
      <test-file-stub
        classname="loader"
        height="100"
        width="100"
      />
    </div>
  </div>
</DocumentFragment>
`;
